header and a bit of the main sections

--- a/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.html
+++ b/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="consulting-agency.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <title>Consulting Agency</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">cases</a></li>
+                <li><a href="#">news</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">contacts</a></li>
+            </ul>
+        </nav>
+
+        <h1>video slider</h1>
+        <p>Challenging established thinking, achieving sustainable advantage</p>
+        <button><a href="#">our services <i class="fas fa-greater-than"></i></a></button>
+    </header>
+
+    <main>
+        <section class="industries">
+            <h2>Industries</h2>
+
+            <div class="content row-1">
+                <article>
+                    <i class="fas fa-plane"></i>
+                    <h3>Travel and Aviation Consulting</h3>
+                    <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+                </article>
+                <article>
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Business Services Consulting</h3>
+                    <p>The sector is diverse, including professional services, education and training, and support services and outsourcing.</p>
+                </article>
+                <article>
+                    <i class="fas fa-shopping-cart"></i>
+                    <h3>Consumer Products Consulting</h3>
+                    <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+                </article>
+            </div>
+
+            <div class="content row-2">
+                <article>
+                    <i class="fas fa-university"></i>
+                    <h3>Financial Services Consulting</h3>
+                    <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+                </article>
+                <article>
+                    <i class="far fa-lightbulb"></i>
+                    <h3>Energy and Environment Consulting</h3>
+                    <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+                </article>
+                <article>
+                    <i class="fas fa-truck"></i>
+                    <h3>Surface Transport & Logistics Consulting</h3>
+                    <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="mid-banner">
+            <h4>To help entrepreneurs get their act together</h4>
+            <h4>before they talk to investors.</h4>
+        </section>
+    </main>
 </body>
+
 </html>
