--- a/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.html
+++ b/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.html
@@ -69,8 +69,25 @@
         </section>
 
         <section class="mid-banner">
-            <h4>To help entrepreneurs get their act together</h4>
-            <h4>before they talk to investors.</h4>
+            <h4>To help entrepreneurs get their act together before they talk to investors.</h4>
+        </section>
+
+        <section class="traders">
+            <h2>Why Traders Choose Us</h2>
+            <div class="article-container">
+                <a href="#">
+                    <h4>Raw Spreads</h4>
+                    <p>Receive premium pricing from Top Tier financial institutions. Pricing from Top Tier financial institutions.</p>
+                </a>
+                <a href="#">
+                    <h4>No Dealing Desk</h4>
+                    <p>With Consulting WP you'll get no re-quotes, no dealer intervention and fair order execution.</p>
+                </a>
+                <a href="#">
+                    <h4>State of the Art</h4>
+                    <p>Trade Forex and CFDs with the world's best trading platforms on your desktop or mobile device.</p>
+                </a>
+            </div>
         </section>
     </main>
 </body>
