--- a/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.html
+++ b/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="consulting-agency.css">
+    <!-- remove for judge testes vvv -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <title>Consulting Agency</title>
 </head>
@@ -89,7 +90,78 @@
                 </a>
             </div>
         </section>
+
+        <section class="founder">
+            <div class="info">
+                <p>We were amazed by how little effort was required on our part to have Consulting WP prepare these materials.
+                    We exchanged a few phone calls and e-mails, and they… handled the rest.</p>
+                <div class="badge">
+                    <p>Founder & CEO, Arcade Systems</p>
+                    <h3>Amanda Seyfried</h3>
+                </div>
+            </div>
+        </section>
+
+        <section class="companies">
+            <ul>
+                <li><img src="/images/partner-TVC.png" alt=""></li>
+                <li><img src="/images/partner-fast-brothers.png" alt=""></li>
+                <li><img src="/images/partner-arcade.png" alt=""></li>
+                <li><img src="/images/partner-KPhone.png" alt=""></li>
+                <li><img src="/images/partner-Edtech.png" alt=""></li>
+                <li><img src="/images/partner-Volker-Stevin.png" alt=""></li>
+            </ul>
+        </section>
     </main>
+
+    <footer>
+        <section class="consulting">
+            <h5>Consulting</h5>
+            <p><i class="fas fa-map-marker-alt"></i> 1010 Avenue of the Moon New York, NY 10018 US.</p>
+            <p><i class="far fa-clock"></i> Mon - Sat 8.00 - 18.00 Sunday CLOSED</p>
+            <p><i class="fas fa-phone fa-rotate-90"></i> 212 386 5578 Free call</p>
+        </section>
+
+        <section class="extra-links">
+            <h5>Extra Links</h5>
+
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Typography</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">News</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Our team</a></li>
+                <li><a href="#">Our approach</a></li>
+            </ul>
+        </section>
+
+        <section class="instagram">
+            <h5>Instagram Widget</h5>
+
+            <div class="feed">
+                <img src="/images/footer-widget(1).jpg" alt="">
+                <img src="/images/footer-widget(2).jpg" alt="">
+                <img src="/images/footer-widget(3).jpg" alt="">
+                <img src="/images/footer-widget(4).jpg" alt="">
+                <img src="/images/footer-widget(5).jpg" alt="">
+                <img src="/images/footer-widget(6).jpg" alt="">
+            </div>
+        </section>
+
+        <section class="social">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </section>
+    </footer>
 </body>
 
 </html>
