--- a/Web Fundamentals - HTML5/Exams/29 August 2018/03. Get-in-touch/get-in-touch.html
+++ b/Web Fundamentals - HTML5/Exams/29 August 2018/03. Get-in-touch/get-in-touch.html
@@ -16,14 +16,14 @@
         <aside>
             <h1>Get in touch</h1>
             <form action="#">
-                <input type="text" name="firstName" placeholder="First name">
-                <i class="fas fa-user"></i>
-                <input type="text" name="lastName" placeholder="Last name">
-                <i class="fas fa-user"></i>
-                <input type="number" name="UCL" placeholder="UCL">
-                <i class="fas fa-address-book"></i>
-                <input type="email" name="email" placeholder="Email">
-                <i class="fas fa-envelope"></i>
+                <input type="text" name="firstName" id="firstName" placeholder="First name">
+                <label for="firstName"><i class="fas fa-user"></i></label>
+                <input type="text" name="lastName" id="lastName" placeholder="Last name">
+                <label for="lastName"><i class="fas fa-user"></i></label>
+                <input type="number" name="UCL" id="ucl" placeholder="UCL">
+                <label for="ucl"><i class="fas fa-address-book"></i></label>
+                <input type="email" name="email" id="email" placeholder="Email">
+                <label for="email"><i class="fas fa-envelope"></i></label>
                 <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
                 <button type="submit">Send</button>
             </form>
